--- a/templates/createpoll.html
+++ b/templates/createpoll.html
@@ -6,12 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="text/javascript" src="../static/createpoll.js"></script>
     <title>PollPool</title>
-    <style>
-      ul li {
-        cursor: pointer;
-        padding: 12px 8px 12px 40px;
-      }
-    </style>
   </head>
   <body>
     <section>
@@ -19,7 +13,7 @@
         <h2>Welcome {{ username }}</h2>
       </div>
       <div>
-        <a href="{{ user_id }}/create_poll">Create Poll</a>
+        <a href="/userdashboard">Home</a>
         <a href="{{ user_id }}/profile">Profile</a>
         <a href="/logout">Logout</a>
       </div>
