--- a/templates/home.html
+++ b/templates/home.html
@@ -4,28 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="text/javascript" src="../static/root.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="../static/style.css" />
     <title>Home</title>
   </head>
   <body>
     <section>
-      <div>
-        <form action="/login" name="login_form" method="POST">
-          <label>Username</label>
-          <input type="text" name="username" required />
-          <label>Password</label>
-          <input type="password" name="password" required />
-          <input type="submit" value="Login" />
-        </form>
-        <div>
-          <p id="error_display"></p>
+      <div class="signin">
+        <div class="content">
+          <h2>Sign In</h2>
+          <form action="/login" method="POST">
+            <div class="form">
+              <div class="inputBox">
+                <input type="text" name="username" required /> <i>Username</i>
+              </div>
+              <div class="inputBox">
+                <input type="password" name="password" required />
+                <i>Password</i>
+              </div>
+              <div class="links">
+                <a href="#">Forgot Password</a> <a href="/signup">Signup</a>
+              </div>
+              <div class="inputBox">
+                <input type="submit" value="Login" />
+              </div>
+            </div>
+          </form>
         </div>
-      </div>
-      <div>
-        <form action="/signup">
-          <label>Not a user? signup</label>
-          <input type="submit" value="Signin" />
-        </form>
       </div>
     </section>
   </body>
