--- a/templates/userregistration.html
+++ b/templates/userregistration.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registratoin</title>
+    <title>Registration</title>
   </head>
   <body>
     <div>
@@ -19,7 +19,7 @@
         <input name="confirm_password" type="password" />
         <input type="submit" value="Register" />
       </form>
-      <a href="/user">Go back</a>
+      <a href="/">Go back</a>
     </div>
   </body>
 </html>
